package org.example;
/**
 * Copyright (c) 29.11.23, 20:18
 * Since: November 2023
 *   <p>
 * Author: dustin
 *  <p>
 * Name: HogwartsToolkit.java
 *  <p>
 * Project-name: HarryPotter
 *
 */
public class SpellbookListImple implements SpellbookList, Iterable<Object> {
    // TODO: Implement the required methods for managing magical items.

}
